--- a/Export_index/clsCommit.cls
+++ b/Export_index/clsCommit.cls
@@ -16,35 +16,35 @@ Implements IThing
 
 Private Type TCommit
     ID As Double
-    name As String
+    Name As String
 End Type
-Private this As TCommit
+Private This As TCommit
 
 Public Property Get Self() As clsCommit
     Set Self = Me
 End Property
 
 Public Property Get ID() As Double
-    ID = this.ID
+    ID = This.ID
 End Property
 
-Public Property Get name() As String
-    name = this.name
+Public Property Get Name() As String
+    Name = This.Name
 End Property
 
 Private Property Get IThing_ID() As Double
-    IThing_ID = this.ID
+    IThing_ID = This.ID
 End Property
 
 Private Property Get IThing_Name() As String
-    IThing_Name = this.name
+    IThing_Name = This.Name
 End Property
 
 Public Property Let ID(ByVal vNewValue As Double)
-    this.ID = vNewValue
+    This.ID = vNewValue
 End Property
 
-Public Property Let name(ByVal vNewValue As String)
-    this.name = vNewValue
+Public Property Let Name(ByVal vNewValue As String)
+    This.Name = vNewValue
 End Property
 
